# python_wrapping

./: .gitmodules  CMakeLists.txt  README.md
bindings/python/: CMakeLists.txt  __init__.py  module.cpp
bindings/python/robot/: 2d_planar.cpp  2d_planar.hpp  expose-robots.hpp
include/python_wrapping/inverse_kinematics/: inverse_kinematics.hpp
include/python_wrapping/robot/: 2d_planar.hpp  robot-base.hpp
script/: 2d_planar.py
src/: CMakeLists.txt
src/inverse_kinematics/: ik.cpp
src/robot/: 2d_planar.cpp  robot-base.cpp
unittest/: CMakeLists.txt  robot.cpp
