# --- MAIN LIBRARY --- #
SET(LIBRARY_NAME ${PROJECT_NAME})

SET(${LIBRARY_NAME}_ROBOT_SOURCES
    robot/robot-base.cpp
    robot/2d_planar.cpp
  )

SET(${LIBRARY_NAME}_INVKIN_SOURCES
  inverse_kinematics/ik.cpp
)

SET(${LIBRARY_NAME}_SOURCES
  ${${LIBRARY_NAME}_ROBOT_SOURCES}
 # ${${LIBRARY_NAME}_INVKIN_SOURCES}
  )

ADD_LIBRARY(${LIBRARY_NAME} SHARED ${HEADERS_FULL_PATH} ${${LIBRARY_NAME}_SOURCES})
SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES LINKER_LANGUAGE CXX)
ADD_HEADER_GROUP(HEADERS_FULL_PATH)
ADD_SOURCE_GROUP(${LIBRARY_NAME}_SOURCES)

PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} eigen3)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib)

